contrast fix

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto&display=swap');
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #28661b   ;
+  --primary-color: #28641b   ;
   --secondary-color: #152372 ;
   --accent1-color: #ffffff;
   --accent2-color: #080303;
-  --accent3-color: #2f4ae2;
+  --accent3-color: #112bbb;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Oswald", sans-serif;
@@ -16,10 +16,10 @@
   --headline-color-on-color: white; /* headlines on a colored background */ 
   --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: var(--accent2-color);
+  --paragraph-background-color: var(--primary-color)  ;
+  --nav-link-color: var(--accent1-color);
   --nav-background-color: var(--secondary-color);
-  --nav-hover-link-color: var(--accent2-color);
+  --nav-hover-link-color: var(--accent1-color);
   --nav-hover-background-color: var(--accent3-color);
 }
 
@@ -103,11 +103,11 @@ main section {
 }
 
 .msg p {
-    color: var(--accent2-color);
+    color: var(--accent1-color);
 }
 
 footer {
-    color:var(--accent2-color);
+    color:var(--accent1-color);
     background-color: var(--secondary-color);
 }
 
